# cobu

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  cargo-generate.toml  rust-toolchain.toml
cobu/: Cargo.toml  README.md
cobu/src/: dead_code.rs  lib.rs
cobu/tests/dead_code/: .gitignore  golden_2.rs  input_1.rs  main.rs
contest-template/: README.md
contest-template/template/: Cargo.toml  build.rs  cargo-generate.toml  pre-script.rhai
crads/src/: lib.rs
crates/cobu/: Cargo.toml
crates/cobu/src/: dead_code.rs  lib.rs  main.rs
crates/cobu/tests/dead_code/: golden_1.rs  golden_3.rs  golden_4.rs  golden_5.rs  golden_6.rs  golden_7.rs  input_2.rs  input_3.rs  input_4.rs  input_5.rs  input_6.rs  input_7.rs  main.rs
crates/cobu_macros/: Cargo.toml
crates/cobu_macros/src/: lib.rs
crates/crads/: Cargo.toml  README.md
crates/crads/src/: lib.rs
examples/: custom_invocation.rs
src/: lib.rs  main.rs
templates/default_template/: Cargo.toml  build.rs  pre-script.rhai
